--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding changes before rebasing conflicts
 -->
 <head>
-	<title>Big SavPOPOP</title>
+	<title>Trouble T</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,15 +18,15 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content POP
+			Trubbz
 		</p>
 	</main>
 	<footer class="container">
-			Just POPOP content
+		Trouble
 		</p>
 	</main>
 	<footer class="container">
-		<p> Ommis 2014</p>
+		<p> Troolz</p>
 	</footer>
 </body>
 </html>
