--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2019 Git.Training
-	Adding changes before rebasing conflicts
+	POPOO
 -->
 <head>
-	<title>Big SavPOPOP</title>
+	<title>POPOP</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,15 +18,15 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content POP
+			POP
 		</p>
 	</main>
 	<footer class="container">
-			Just POPOP content
+			POPOP 
 		</p>
 	</main>
 	<footer class="container">
-		<p> Ommis 2014</p>
+		<p> POPOPOPO</p>
 	</footer>
 </body>
 </html>
