local:updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2019 Git.Training
-	POPOO
 -->
 <head>
-<<<<<<< HEAD
-	<title>POPOP</title>
-=======
-	<title>Trouble T</title>
->>>>>>> bigtrouble
+	<title>Omnis Repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -22,27 +17,22 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-<<<<<<< HEAD
-			POP
+			Marge, it takes two to lie. One to lie and one to listen.
+I'm a Spalding Gray in a Rick Dees world. Slow down, Bart! My legs don't know how to be as long as yours. Fame was like a drug. But what was even more like a drug were the drugs. Oh, loneliness and cheeseburgers are a dangerous mix.
+Ahoy hoy? I'm allergic to bee stings. They cause me to, uh, die. Whoa, slow down there, maestro. There's a *New* Mexico? The Internet King? I wonder if he could provide faster nudity… Marge, it takes two to lie. One to lie and one to listen.
 		</p>
 	</main>
-	<footer class="container">
-			POPOP 
-		</p>
+	<main>	
+		<footer class="container">
+			<p>
+				Filler 
+			</p>
+		</footer>
 	</main>
-	<footer class="container">
-		<p> POPOPOPO</p>
-=======
-			Trubbzaaddd
-		</p>
+	<main>
+		<footer class="container">
+			<p>&copy; 2019 Git.Training, all rights reserved</p>
+		</footer>
 	</main>
-	<footer class="container">
-		Trouble
-		</p>
-	</main>
-	<footer class="container">
-		<p> Troolz</p>
->>>>>>> bigtrouble
-	</footer>
 </body>
 </html>
