--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2019 Git.Training
 -->
 <head>
-	<title>Omnis Repo</title>
+	<title>Omnis Repo 11</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,9 +18,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Marge, it takes two to lie. One to lie and one to listen.
-I'm a Spalding Gray in a Rick Dees world. Slow down, Bart! My legs don't know how to be as long as yours. Fame was like a drug. But what was even more like a drug were the drugs. Oh, loneliness and cheeseburgers are a dangerous mix.
-Ahoy hoy? I'm allergic to bee stings. They cause me to, uh, die. Whoa, slow down there, maestro. There's a *New* Mexico? The Internet King? I wonder if he could provide faster nudity… Marge, it takes two to lie. One to lie and one to listen.
-		</p>
+I'm a Spalding Gray in a Rick Dees world. Slow down, Bart! My legs don't know how to be as long as yours. Fame was like a drug. But what was even more like a drug were the drugs.
 	</main>
 	<main>	
 		<footer class="container">
