Updating for tag 1.2

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2019 Git.Training
 -->
 <head>
-	<title>Omnis Repo 1111111</title>
+	<title>Updaying title for tagging example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
